feat: implement full dockerization and environment orchestration
- Added docker-compose.yml to manage PostgreSQL, Spring Boot API, and Angular.
- Configured Nginx as a Reverse Proxy to handle routing and bypass CORS.
- Created multi-stage Dockerfiles for optimized production builds.
- Refactored Frontend to use environment-specific API URLs (environment.prod.ts).
- Verified full system integration: Database persistence + API logic + UI.